# stratux-companion

./: .env  pyproject.toml
scripts/: deploy.sh  startup.sh
stratux_companion/: alarm_interface.py  alarm_service.py  config.py  entrypoint.py  hardware_status_service.py  menu.py  position_service.py  power_service.py  settings_interface.py  settings_service.py  sound_interface.py  sound_service.py  status_service.py  traffic_interface.py  traffic_service.py  ui_service.py  user_interface.py  util.py
stratux_companion/scripts/: startup.sh
systemd/: stratux_companion.service
tests/: conftest.py
