[tool.poetry]
name = "stratux-companion"
version = "0.1.0"
description = ""
authors = ["Alexander Gorokhov"]
#readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^12.0"
luma-lcd = "^2.11.0"
pydantic = "<2.0"
pyttsx3 = "^2.90"
geopy = "^2.4.1"
geographiclib = "^2.0"
requests = "^2.31.0"
adafruit-circuitpython-ina219 = "^3.4.24"
psutil = "^5.9.8"
chime = "^0.7.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
